--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "webdriverio-mobile",
+    "name": "tugas-akhir-mobile-automation",
     "version": "1.0.0",
-    "description": "mobile automation apk demo",
+    "description": "tugas-akhir-mobile-automation-apk-diet-meal",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
     "keywords": [
         "mobile"
     ],
-    "author": "alvin",
+    "author": "Dwiky Kurniawan",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.20.5",
